--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,3 +33,12 @@ where = ["src"]
 addopts = [
   "--import-mode=importlib",
 ]
+
+[tool.ruff.lint]
+select = ["ALL"]
+ignore = ["D105", "D107", "D211", "D212", "TD003"]
+exclude = ["docs/"]
+
+[tool.ruff.lint.per-file-ignores]
+"tests/**/*.py" = ["D103", "S101", "ANN001", "ANN201", "ANN205", "INP001", "SLF001", "D101", "D102"]
+"__init__.py" = ["F401"]
