--- a/.github/workflows/mpi_test.yml
+++ b/.github/workflows/mpi_test.yml
@@ -11,6 +11,7 @@ jobs:
       fail-fast: false
       matrix:
         python-version: ["3.10", "3.11", "3.12"]
+        mpi: [ 'mpich', 'openmpi', 'intelmpi']
     
     steps:
     - uses: actions/checkout@v4
@@ -20,10 +21,10 @@ jobs:
       with:
         python-version: ${{ matrix.python-version }}
 
-    - name: Install OpenMPI
-      run: |
-        sudo apt-get update
-        sudo apt-get install -y openmpi-bin libopenmpi-dev
+    - name: Setup MPI
+      uses: mpi4py/setup-mpi@v1
+      with:
+        mpi: ${{ matrix.mpi }}
 
     - name: Install dependencies
       run: |
@@ -37,4 +38,4 @@ jobs:
 
     - name: Run the tests
       run: |
-        mpirun -n 4 pytest --with-mpi tests/test_sweepexp_mpi.py
+        mpiexec -n 2 pytest --with-mpi tests/test_sweepexp_mpi.py
