bugfix: adding fallback if mpi4py is not available

--- a/.github/workflows/mpi_test.yml
+++ b/.github/workflows/mpi_test.yml
@@ -40,9 +40,9 @@ jobs:
       run: |
         # only run the coverage test with openmpi
         if [ "${{ matrix.mpi }}" = "openmpi" ]; then
-            mpiexec -n 3 bash -c 'COVERAGE_FILE=.coverage.$OMPI_COMM_WORLD_RANK pytest --cov=src --with-mpi --junitxml=junit.xml -o junit_family=legacy tests/test_sweepexp_mpi.py'
+            mpiexec -n 3 bash -c 'COVERAGE_FILE=.coverage.$OMPI_COMM_WORLD_RANK pytest --cov=src --with-mpi --junitxml=junit.xml -o junit_family=legacy tests/test_sweepexp_mpi.py tests/test_sweepexp.py'
         else
-            mpiexec -n 3 pytest --with-mpi tests/test_sweepexp_mpi.py
+            mpiexec -n 3 pytest --with-mpi tests/test_sweepexp_mpi.py tests/test_sweepexp.py
         fi
 
     - name: Combine coverage reports
